2021-01-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Make up/down keys in expression history smarter (cycle through expression history in less cases)
	* Fix smart parentheses keyboard shortcut (add shift)

2020-12-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Adjust icon/button sizes in history view when custom font is used
	* Restore RPN button sizes when decreasing font size
	* Fix trailing thin space in multi-line history result

2020-12-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Separate unit edit dialog into two tabs and update unit class names
	* Reorganize and add another tab to the preferences dialog

2020-12-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for qalc commands (expression is interpreted as command if it begins with '/')
	* Support for reading expressions and commands from file (as in qalc, using command line option -f/--file) 

2020-12-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Chain mode (key presses 1, 2, *, 3 results in expression (1+2)*3, with result updated intermittently)

2020-12-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Chain syntax parsing mode (1+2*3=(1+2)*3=9)
	* RPN syntax as parsing mode
	* Use slider for max plot time
	* Configurable calculate-as-you-type add to history delay

2020-12-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use system tray icon (hide the application when the main window is closed) and hide on startup options on Windows

2020-12-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add tooltip to ellipsized parse status
	* Reduce max length (from 50 000 to 5000) of saved history item

2020-12-01 Polakrity <75248644+Polakrity@users.noreply.github.com>

	* French translation

2020-11-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* New design for expression, status, and result (place all in the same frame and remove border)