@@ -1,3 +1,8 @@
+2021-01-12 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Restore position when restoring window closed to system tray
+	* Save mode/preferences and definitions before closing to system tray
+
 2021-01-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Make up/down keys in expression history smarter (cycle through expression history in less cases)
